--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,35 +1,13 @@
 {
-  "name": "Cats Realm",
-  "short_name": "Cats Realm",
-  "description": "A simple progressive web app template using Next.js",
-  "display": "standalone",
-  "orientation": "portrait",
-  "scope": "/",
+  "name": "NurseDiary",
+  "short_name": "NurseDiary",
   "start_url": "/",
-  "background_color": "#ffffff",
-  "theme_color": "#F3EFE0",
+  "scope": "/",
+  "display": "standalone",
+  "background_color": "#0B1020",
+  "theme_color": "#0B1020",
   "icons": [
-    {
-      "src": "/icons/icon-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192"
-    },
-    {
-      "src": "/icons/icon-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512"
-    },
-    {
-      "src": "/icons/icon-maskable-192x192.png",
-      "type": "image/png",
-      "sizes": "192x192",
-      "purpose": "maskable"
-    },
-    {
-      "src": "/icons/icon-maskable-512x512.png",
-      "type": "image/png",
-      "sizes": "512x512",
-      "purpose": "maskable"
-    }
+    { "src": "/icons/icon-192.png", "sizes": "192x192", "type": "image/png" },
+    { "src": "/icons/icon-512.png", "sizes": "512x512", "type": "image/png" }
   ]
 }
